creating cards with the theme
making the commit before I do much here I used talwind to style it I made sections with game publishers along with their best games

--- a/index.html
+++ b/index.html
@@ -1,14 +1,121 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portifõlio Victor e Felipe</title>
+  <title>Portfolio Victor and Felipe</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline text-center mt-10">
-    Olá, Tailwind CSS!
-  </h1>
+<body class="bg-gray-100 text-gray-900">
+  <!-- Header -->
+  <header class="bg-blue-600 text-white p-5 text-center">
+  </header>
+
+  <!-- PlayStation Section -->
+  <div class="bg-cover bg-center text-white py-10" style="background-image: url('https://tm.ibxk.com.br/2023/11/09/09100313099051.jpg?ims=750x');">
+    <h2 class="text-3xl font-bold text-center mb-6 text-blue-500"><i class="bi bi-playstation"></i> PlayStation</h2>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
+      <!-- Card 1 -->
+      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold mb-2"><i class="bi bi-playstation"></i> The Last of Us</h3>
+        <p>Experience survival in a post-apocalyptic world.</p>
+      </div>
+      <!-- Card 2 -->
+      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold mb-2"><i class="bi bi-playstation"></i> God of War</h3>
+        <p>Embark on a mythological journey with Kratos.</p>
+      </div>
+      <!-- Card 3 -->
+      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold mb-2"><i class="bi bi-playstation"></i> Horizon Zero Dawn</h3>
+        <p>Explore a world overrun by machines.</p>
+      </div>
+      <!-- Card 4 -->
+      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold mb-2"><i class="bi bi-playstation"></i> Spider-Man</h3>
+        <p>Swing through New York City as the iconic hero.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Xbox Section -->
+  <div class="bg-cover bg-center text-white py-10" style="background-image: url('https://example.com/xbox-bg.jpg');">
+    <h2 class="text-3xl font-bold text-center mb-6 text-green-500"><i class="bi bi-xbox"></i> Xbox</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
+      <!-- Card 1 -->
+      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold mb-2"><i class="bi bi-xbox"></i> Halo Infinite</h3>
+        <p>Join the Master Chief in an epic battle.</p>
+      </div>
+      <!-- Card 2 -->
+      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold mb-2"><i class="bi bi-xbox"></i> Forza Horizon</h3>
+        <p>Race through breathtaking open-world tracks.</p>
+      </div>
+      <!-- Card 3 -->
+      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold mb-2"><i class="bi bi-xbox"></i> Gears of War</h3>
+        <p>Fight against the Locust Horde in this classic shooter.</p>
+      </div>
+      <!-- Card 4 -->
+      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+        <h3 class="text-xl font-bold mb-2"><i class="bi bi-xbox"></i> Sea of Thieves</h3>
+        <p>Live the pirate life in this shared-world adventure.</p>
+      </div>
+    </div>
+  </div>
+
+ <!-- Nintendo Section -->
+<div class="bg-cover bg-center text-white py-10" style="background-image: url('https://example.com/nintendo-bg.jpg');">
+  <h2 class="text-3xl font-bold text-center mb-6 text-red-500"><i class="bi bi-nintendo-switch"></i> Nintendo</h2>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
+    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+      <h3 class="text-xl font-bold mb-2"><i class="bi bi-nintendo-switch"></i> The Legend of Zelda: Breath of the Wild</h3>
+      <p>Embark on an epic open-world adventure in Hyrule.</p>
+    </div>
+    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+      <h3 class="text-xl font-bold mb-2"><i class="bi bi-nintendo-switch"></i> Super Mario Odyssey</h3>
+      <p>Join Mario on a globetrotting adventure to save Princess Peach.</p>
+    </div>
+    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+      <h3 class="text-xl font-bold mb-2"><i class="bi bi-nintendo-switch"></i> Animal Crossing: New Horizons</h3>
+      <p>Create your dream island and interact with friendly neighbors.</p>
+    </div>
+    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+      <h3 class="text-xl font-bold mb-2"><i class="bi bi-nintendo-switch"></i> Mario Kart 8 Deluxe</h3>
+      <p>Race your friends in this thrilling and colorful karting game.</p>
+    </div>
+  </div>
+</div>
+
+<!-- PC Section -->
+<div class="bg-cover bg-center text-white py-10" style="background-image: url('https://example.com/pc-bg.jpg');">
+  <h2 class="text-3xl font-bold text-center mb-6 text-yellow-500"><i class="bi bi-laptop"></i> PC Games</h2>
+  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
+    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+      <h3 class="text-xl font-bold mb-2"><i class="bi bi-laptop"></i> Counter-Strike: Global Offensive</h3>
+      <p>Compete in tactical team-based shooting battles.</p>
+    </div>
+    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+      <h3 class="text-xl font-bold mb-2"><i class="bi bi-laptop"></i> The Witcher 3: Wild Hunt</h3>
+      <p>Explore a rich, open-world RPG as Geralt of Rivia.</p>
+    </div>
+    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+      <h3 class="text-xl font-bold mb-2"><i class="bi bi-laptop"></i> League of Legends</h3>
+      <p>Compete in this classic MOBA with friends and rivals.</p>
+    </div>
+    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
+      <h3 class="text-xl font-bold mb-2"><i class="bi bi-laptop"></i> Valorant</h3>
+      <p>Engage in tactical shooter battles with unique Agents.</p>
+    </div>
+  </div>
+</div>
+
+
+  <!-- Footer -->
+  <footer class="bg-blue-600 text-white text-center p-3 mt-5">
+  </footer>
 </body>
 </html>
