finish section playstation

--- a/index.html
+++ b/index.html
@@ -14,108 +14,199 @@
 
   <!-- PlayStation Section -->
   <div class="bg-cover bg-center text-white py-10" style="background-image: url('https://tm.ibxk.com.br/2023/11/09/09100313099051.jpg?ims=750x');">
-    <h2 class="text-3xl font-bold text-center mb-6 text-blue-500"><i class="bi bi-playstation"></i> PlayStation</h2>
-
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
-      <!-- Card 1 -->
-      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-        <h3 class="text-xl font-bold mb-2"><i class="bi bi-playstation"></i> The Last of Us</h3>
-        <p>Experience survival in a post-apocalyptic world.</p>
-      </div>
-      <!-- Card 2 -->
-      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-        <h3 class="text-xl font-bold mb-2"><i class="bi bi-playstation"></i> God of War</h3>
-        <p>Embark on a mythological journey with Kratos.</p>
-      </div>
-      <!-- Card 3 -->
-      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-        <h3 class="text-xl font-bold mb-2"><i class="bi bi-playstation"></i> Horizon Zero Dawn</h3>
-        <p>Explore a world overrun by machines.</p>
-      </div>
-      <!-- Card 4 -->
-      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-        <h3 class="text-xl font-bold mb-2"><i class="bi bi-playstation"></i> Spider-Man</h3>
-        <p>Swing through New York City as the iconic hero.</p>
+    <div class="relative container mx-auto">
+      <h2 class="text-3xl font-bold text-center mb-6 text-white z-10"><i class="bi bi-playstation"></i> PlayStation</h2>
+  
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5 relative z-10">
+        <!-- Card 1 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://image.api.playstation.com/vulcan/ap/rnd/202206/0720/ca6Dr3k7PXKaDgEbhN9eODeD.png" 
+            alt="The Last of Us" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-playstation"></i> The Last of Us</h3>
+          <p>Experience survival in a post-apocalyptic world.</p>
+        </div>
+        <!-- Card 2 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://image.api.playstation.com/vulcan/img/rnd/202010/2217/p3pYq0QxntZQREXRVdAzmn1w.png" 
+            alt="God of War" 
+            class="rounded-t-lg w-full h h-90- md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-playstation"></i> God of War</h3>
+          <p>Embark on a mythological journey with Kratos.</p>
+        </div>
+        <!-- Card 3 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://image.api.playstation.com/vulcan/ap/rnd/202409/2716/16b33fa9a5c7285ba86a035b4a1c5f8eb430b407eae35ffd.png" 
+            alt="Horizon Zero Dawn" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-playstation"></i> Horizon Zero Dawn</h3>
+          <p>Explore a world overrun by machines.</p>
+        </div>
+        <!-- Card 4 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://cdn1.epicgames.com/offer/4bc43145bb8245a5b5cc9ea262ffbe0e/EGS_MarvelsSpiderManRemastered_InsomniacGamesNixxesSoftware_S1_2560x1440-73702d11161b29a0b7c40a8b489b1808" 
+            alt="Spider-Man" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-playstation"></i> Spider-Man</h3>
+          <p>Swing through New York City as the iconic hero.</p>
+        </div>
       </div>
     </div>
   </div>
 
   <!-- Xbox Section -->
   <div class="bg-cover bg-center text-white py-10" style="background-image: url('https://example.com/xbox-bg.jpg');">
-    <h2 class="text-3xl font-bold text-center mb-6 text-green-500"><i class="bi bi-xbox"></i> Xbox</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
-      <!-- Card 1 -->
-      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-        <h3 class="text-xl font-bold mb-2"><i class="bi bi-xbox"></i> Halo Infinite</h3>
-        <p>Join the Master Chief in an epic battle.</p>
-      </div>
-      <!-- Card 2 -->
-      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-        <h3 class="text-xl font-bold mb-2"><i class="bi bi-xbox"></i> Forza Horizon</h3>
-        <p>Race through breathtaking open-world tracks.</p>
-      </div>
-      <!-- Card 3 -->
-      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-        <h3 class="text-xl font-bold mb-2"><i class="bi bi-xbox"></i> Gears of War</h3>
-        <p>Fight against the Locust Horde in this classic shooter.</p>
-      </div>
-      <!-- Card 4 -->
-      <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-        <h3 class="text-xl font-bold mb-2"><i class="bi bi-xbox"></i> Sea of Thieves</h3>
-        <p>Live the pirate life in this shared-world adventure.</p>
+    <div class="relative container mx-auto">
+      <h2 class="text-3xl font-bold text-center mb-6 text-green-500"><i class="bi bi-xbox"></i> Xbox</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
+        <!-- Card 1 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/halo-infinite.jpg" 
+            alt="Halo Infinite" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-xbox"></i> Halo Infinite</h3>
+          <p>Join the Master Chief in an epic battle.</p>
+        </div>
+        <!-- Card 2 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/forza-horizon.jpg" 
+            alt="Forza Horizon" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-xbox"></i> Forza Horizon</h3>
+          <p>Race through breathtaking open-world tracks.</p>
+        </div>
+        <!-- Card 3 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/gears-of-war.jpg" 
+            alt="Gears of War" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-xbox"></i> Gears of War</h3>
+          <p>Fight against the Locust Horde in this classic shooter.</p>
+        </div>
+        <!-- Card 4 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/sea-of-thieves.jpg" 
+            alt="Sea of Thieves" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-xbox"></i> Sea of Thieves</h3>
+          <p>Live the pirate life in this shared-world adventure.</p>
+        </div>
       </div>
     </div>
   </div>
 
- <!-- Nintendo Section -->
-<div class="bg-cover bg-center text-white py-10" style="background-image: url('https://example.com/nintendo-bg.jpg');">
-  <h2 class="text-3xl font-bold text-center mb-6 text-red-500"><i class="bi bi-nintendo-switch"></i> Nintendo</h2>
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
-    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-      <h3 class="text-xl font-bold mb-2"><i class="bi bi-nintendo-switch"></i> The Legend of Zelda: Breath of the Wild</h3>
-      <p>Embark on an epic open-world adventure in Hyrule.</p>
-    </div>
-    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-      <h3 class="text-xl font-bold mb-2"><i class="bi bi-nintendo-switch"></i> Super Mario Odyssey</h3>
-      <p>Join Mario on a globetrotting adventure to save Princess Peach.</p>
-    </div>
-    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-      <h3 class="text-xl font-bold mb-2"><i class="bi bi-nintendo-switch"></i> Animal Crossing: New Horizons</h3>
-      <p>Create your dream island and interact with friendly neighbors.</p>
-    </div>
-    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-      <h3 class="text-xl font-bold mb-2"><i class="bi bi-nintendo-switch"></i> Mario Kart 8 Deluxe</h3>
-      <p>Race your friends in this thrilling and colorful karting game.</p>
+  <!-- Nintendo Section -->
+  <div class="bg-cover bg-center text-white py-10" style="background-image: url('https://example.com/nintendo-bg.jpg');">
+    <div class="relative container mx-auto">
+      <h2 class="text-3xl font-bold text-center mb-6 text-red-500"><i class="bi bi-nintendo-switch"></i> Nintendo</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
+        <!-- Card 1 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/zelda.jpg" 
+            alt="The Legend of Zelda: Breath of the Wild" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-nintendo-switch"></i> The Legend of Zelda: Breath of the Wild</h3>
+          <p>Embark on an epic open-world adventure in Hyrule.</p>
+        </div>
+        <!-- Card 2 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/super-mario-odyssey.jpg" 
+            alt="Super Mario Odyssey" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-nintendo-switch"></i> Super Mario Odyssey</h3>
+          <p>Join Mario on a 3D adventure across the world.</p>
+        </div>
+        <!-- Card 3 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/splatoon.jpg" 
+            alt="Splatoon 2" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-nintendo-switch"></i> Splatoon 2</h3>
+          <p>Engage in colorful team-based ink battles.</p>
+        </div>
+        <!-- Card 4 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/animal-crossing.jpg" 
+            alt="Animal Crossing: New Horizons" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-nintendo-switch"></i> Animal Crossing: New Horizons</h3>
+          <p>Build your dream life on a deserted island.</p>
+        </div>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- PC Section -->
-<div class="bg-cover bg-center text-white py-10" style="background-image: url('https://example.com/pc-bg.jpg');">
-  <h2 class="text-3xl font-bold text-center mb-6 text-yellow-500"><i class="bi bi-laptop"></i> PC Games</h2>
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
-    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-      <h3 class="text-xl font-bold mb-2"><i class="bi bi-laptop"></i> Counter-Strike: Global Offensive</h3>
-      <p>Compete in tactical team-based shooting battles.</p>
-    </div>
-    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-      <h3 class="text-xl font-bold mb-2"><i class="bi bi-laptop"></i> The Witcher 3: Wild Hunt</h3>
-      <p>Explore a rich, open-world RPG as Geralt of Rivia.</p>
-    </div>
-    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-      <h3 class="text-xl font-bold mb-2"><i class="bi bi-laptop"></i> League of Legends</h3>
-      <p>Compete in this classic MOBA with friends and rivals.</p>
-    </div>
-    <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300">
-      <h3 class="text-xl font-bold mb-2"><i class="bi bi-laptop"></i> Valorant</h3>
-      <p>Engage in tactical shooter battles with unique Agents.</p>
+  <!-- PC Section -->
+  <div class="bg-cover bg-center text-white py-10" style="background-image: url('https://example.com/pc-bg.jpg');">
+    <div class="relative container mx-auto">
+      <h2 class="text-3xl font-bold text-center mb-6 text-blue-500"><i class="bi bi-pc-display"></i> PC</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-5">
+        <!-- Card 1 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/cyberpunk.jpg" 
+            alt="Cyberpunk 2077" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-pc-display"></i> Cyberpunk 2077</h3>
+          <p>Immerse yourself in the futuristic open world of Night City.</p>
+        </div>
+        <!-- Card 2 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/red-dead-redemption.jpg" 
+            alt="Red Dead Redemption 2" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-pc-display"></i> Red Dead Redemption 2</h3>
+          <p>Experience the wild west in this critically acclaimed open-world game.</p>
+        </div>
+        <!-- Card 3 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/witcher3.jpg" 
+            alt="The Witcher 3" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-pc-display"></i> The Witcher 3</h3>
+          <p>Embark on a monster-hunting adventure as Geralt of Rivia.</p>
+        </div>
+        <!-- Card 4 -->
+        <div class="bg-white text-gray-900 shadow-lg rounded-lg p-4 hover:bg-gray-200 hover:scale-105 transition duration-300 mb-4">
+          <img 
+            src="https://example.com/valhallah.jpg" 
+            alt="Assassin's Creed Valhalla" 
+            class="rounded-t-lg w-full h-90 md:h-48 object-cover"
+          />
+          <h3 class="text-xl font-bold mt-3 mb-2"><i class="bi bi-pc-display"></i> Assassin's Creed Valhalla</h3>
+          <p>Live the life of a Viking raider in this action RPG.</p>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-
-
-  <!-- Footer -->
-  <footer class="bg-blue-600 text-white text-center p-3 mt-5">
-  </footer>
 </body>
 </html>
