--- a/index.html
+++ b/index.html
@@ -8,13 +8,44 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link type="icon" rel="icon" href="images/logo.png" />
 </head>
-<body class="bg-gray-100 text-gray-900">
-  <!-- Header -->
-  <header class="bg-blue-600 text-white p-5 text-center">
-  </header>
+<style>
+  /* Animação de rotação para a logo */
+  @keyframes rotateLogo {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .logo {
+    animation: rotateLogo 5s linear infinite;
+  }
+
+  
+  .header {
+    background: rgba(0, 0, 0, 0.6); 
+    backdrop-filter: blur(5px); 
+    
+  }
+</style>
+</head>
+<body class="relative">
+
+<!-- Header -->
+<header class="w-full z-[50] absolute header shadow-lg text-white py-5 flex items-center justify-center">
+  <div class="flex items-center">
+    <div class="logo bg-gradient-to-r from-blue-900 via-purple-900 to-pink-900 rounded-full w-12 h-12 flex items-center justify-center shadow-lg">
+      <!-- <i class="bi bi-controller text-2xl text-white"></i> -->
+       <img src="images/logo.png" alt="Logo"> </img>
+    </div>
+    <h1 class="text-2xl font-bold ml-4">GameSphere</h1>
+  </div>
+</header>
 
   <!-- PlayStation Section -->
-  <div class="relative bg-cover bg-center text-white py-10" style="background-image: url('https://tm.ibxk.com.br/2023/11/09/09100313099051.jpg?ims=750x');">
+  <div class="relative bg-cover bg-center text-white py-10 pt-28" style="background-image: url('https://tm.ibxk.com.br/2023/11/09/09100313099051.jpg?ims=750x');">
     <div class="absolute inset-0 bg-black bg-opacity-40 backdrop-blur-sm"></div>
    
     <div class="relative container mx-auto">
