--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   }
 </style>
 </head>
-<body class="relative">
+<body >
 
 <!-- Header -->
 <header class="w-full z-[50] absolute header shadow-lg text-white py-5 flex items-center justify-center">
