--- a/index.html
+++ b/index.html
@@ -251,5 +251,45 @@
       </div>
     </div>
   </div>
+
+
+   <!-- Footer -->
+<footer class="bg-gray-900 text-white py-8">
+  <div class="container mx-auto text-center">
+    <!-- Redes sociais -->
+    <div class="flex justify-center space-x-4 mb-4">
+      <a href="https://facebook.com" target="_blank" class="text-xl hover:text-blue-500">
+        <i class="bi bi-facebook"></i>
+      </a>
+      <a href="https://twitter.com" target="_blank" class="text-xl hover:text-blue-400">
+        <i class="bi bi-twitter"></i>
+      </a>
+      <a href="https://instagram.com" target="_blank" class="text-xl hover:text-pink-500">
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a href="https://linkedin.com" target="_blank" class="text-xl hover:text-blue-700">
+        <i class="bi bi-linkedin"></i>
+      </a>
+      <a href="https://github.com" target="_blank" class="text-xl hover:text-gray-500">
+        <i class="bi bi-github"></i>
+      </a>
+    </div>
+
+    <p class="text-gray-400 mb-4">
+      Criado por 
+      <a href="https://github.com/Victor14791012" target="_blank" class="hover:text-white underline">Victor</a> e 
+      <a href="https://github.com/maousama1432" target="_blank" class="hover:text-white underline">Felipe</a>. 
+      Entre em contato: 
+      <a href="mailto:contato@gamesphere.com" class="hover:text-white underline">contato@gamesphere.com</a>
+    </p>
+
+    <p class="text-gray-500">
+      &copy; 2024 GameSphere. Todos os direitos reservados.
+    </p>
+  </div>
+</footer>
+
+
+
 </body>
 </html>
